ASSEMBLY = TestLibrary
TARGET = library

ASSEMBLY_INFO_SOURCE =  \
	Properties/AssemblyInfo.cs

LIBS = $(LOG4NET_LIBS) $(DATALIBS) $(JSON_LIBS) $(DOTCMIS_LIBS) $(MONOMAC_LIBS) \
	$(LIBS_CMISSYNCLIB_DEPS) \
	$(NUNIT_LIBS) \
	$(DBREEZE_LIBS) \
	$(MOQ_LIBS)

SOURCES =  \
	AccumulatorTests/LocalObjectFetcherTest.cs \
	AccumulatorTests/RemoteObjectFetcherTest.cs \
	AccumulatorTests/RemoteObjectMovedOrRenamedAccumulatorTest.cs \
	AlgorithmsTests/CyclicDependencies/NoCycleDetectionTests.cs \
	AlgorithmsTests/CyclicDependencies/SimpleCycleDetectionTests.cs \
	AlgorithmsTests/StringTarjanNode.cs \
	AlgorithmsTests/TarjanSimpleLinearTests.cs \
	AlgorithmsTests/TrajanSimpleCircleTests.cs \
	CmisTests/AuthenticationTests/AuthProviderFactoryTest.cs \
	CmisTests/AuthenticationTests/KerberosAuthenticationProviderTest.cs \
	CmisTests/AuthenticationTests/PersistentStandardAuthenticationProviderTest.cs \
	CmisTests/ConvenienceExtendersTests/AllowableActionExtendersTest.cs \
	CmisTests/ConvenienceExtendersTests/CmisConvenienceExtendersTest.cs \
	CmisTests/OperationContextFactoryTest.cs \
	CmisTests/RepositoryTests.cs \
	CmisTests/UiUtilsTests/CmisUtilsTest.cs \
	ConfigTests/CmisRepoCredentialsTest.cs \
	ConfigTests/ConfigurationTest.cs \
	ConfigTests/CryptoTest.cs \
	ConfigTests/DefaultSettingsTests.cs \
	ConfigTests/PasswordTest.cs \
	ConfigTests/RepoInfoTests.cs \
	ConfigTests/ServerCredentialsTest.cs \
	ConfigTests/UserCredentialsTest.cs \
	ConsumerTests/LocalSituationDetectionTest.cs \
	ConsumerTests/RemoteSituationDetectionTest.cs \
	ConsumerTests/SituationSolverTests/AbstractEnhancedSolverTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectAddedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectChangedRemoteObjectChangedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectChangedRemoteObjectMovedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectChangedRemoteObjectRenamedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectChangedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectDeletedRemoteObjectDeletedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectDeletedRemoteObjectRenamedOrMovedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectDeletedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectMovedRemoteObjectChangedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectMovedRemoteObjectMovedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectMovedRemoteObjectRenamedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectMovedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectRenamedOrMovedRemoteObjectDeletedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectRenamedRemoteObjectChangedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectRenamedRemoteObjectMovedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectRenamedRemoteObjectRenamedTest.cs \
	ConsumerTests/SituationSolverTests/LocalObjectRenamedTest.cs \
	ConsumerTests/SituationSolverTests/PrivateWorkingCopyTests/LocalObjectAddedWithPWCTest.cs \
	ConsumerTests/SituationSolverTests/PrivateWorkingCopyTests/LocalObjectChangedRemoteObjectChangedWithPWCTest.cs \
	ConsumerTests/SituationSolverTests/PrivateWorkingCopyTests/LocalObjectChangedWithPWCTest.cs \
	ConsumerTests/SituationSolverTests/RemoteObjectAddedTest.cs \
	ConsumerTests/SituationSolverTests/RemoteObjectChangedTest.cs \
	ConsumerTests/SituationSolverTests/RemoteObjectDeletedTest.cs \
	ConsumerTests/SituationSolverTests/RemoteObjectMovedTest.cs \
	ConsumerTests/SituationSolverTests/RemoteObjectRenamedTest.cs \
	ConsumerTests/SyncMechanismTest.cs \
	EventsTests/ActivityListenerAggregatorTest.cs \
	EventsTests/BaseExceptionEventTest.cs \
	EventsTests/EncapsuledEventTest.cs \
	EventsTests/EventHandlerPrioritiesTest.cs \
	EventsTests/FileEventTest.cs \
	EventsTests/FileOrFolderEventFactoryTest.cs \
	EventsTests/FolderEventTest.cs \
	EventsTests/FsEventTest.cs \
	EventsTests/FullSyncCompletedEventTest.cs \
	EventsTests/GenericSyncEventHandlerTest.cs \
	EventsTests/InteractionNeededInitializationTest.cs \
	EventsTests/PermissionDeniedEventCalculatesBlockingUntilTest.cs \
	EventsTests/PermissionDeniedExceptionTest.cs \
	EventsTests/ProxyAuthRequiredEventTest.cs \
	EventsTests/StartNextSyncEventTest.cs \
	FileTransmissionTests/ChunkedDownloaderTest.cs \
	FileTransmissionTests/ChunkedFileUploaderTest.cs \
	FileTransmissionTests/ContentTaskUtilsTest.cs \
	FileTransmissionTests/SimpleFileDownloaderTest.cs \
	FileTransmissionTests/SimpleFileUploaderTest.cs \
	FileTransmissionTests/TransmissionManagerTest.cs \
	FileTransmissionTests/TransmissionTest.cs \
	FilterTests/FilterAggregatorTest.cs \
	FilterTests/GenericHandleDublicatedEventsFilterTest.cs \
	FilterTests/IgnoreAlreadyHandledContentChangeEventsFilterTest.cs \
	FilterTests/IgnoreAlreadyHandledFsEventsFilterTest.cs \
	FilterTests/IgnoreFileNamesFilterTest.cs \
	FilterTests/IgnoredFolderNamesFilterTest.cs \
	FilterTests/IgnoredFoldersFilterTest.cs \
	FilterTests/InvalidFolderNameFilterTest.cs \
	FilterTests/ReportingFilterTest.cs \
	FilterTests/RepositoryRootDeletedDetectionTest.cs \
	HashAlgorithmTests/SHA1ReuseTest.cs \
	IntegrationTests/AllHandlersIT.cs \
	IntegrationTests/AllowableActionsTests/ReadingActionsTests.cs \
	IntegrationTests/BaseFullRepoTest.cs \
	IntegrationTests/ClientBrandTests.cs \
	IntegrationTests/ContentChangeIT.cs \
	IntegrationTests/DotCMISTests.cs \
	IntegrationTests/DownloadLinkTests.cs \
	IntegrationTests/FileSystemEventOrderTest.cs \
	IntegrationTests/FullInMemoryRepoTest.cs \
	IntegrationTests/FullRepoTests.cs \
	IntegrationTests/HttpProxyConnectionTests.cs \
	IntegrationTests/IntegrationTestUtils.cs \
	IntegrationTests/NeedsLocalFileSystemFolder.cs \
	IntegrationTests/PrivateWorkingCopyTests/AppendContentStreamTests.cs \
	IntegrationTests/PrivateWorkingCopyTests/CreateDocumentTests.cs \
	IntegrationTests/RepositoryStatusIT.cs \
	IntegrationTests/RepositoryUtilsTests.cs \
	IntegrationTests/SelectiveIgnoreTests/CrudIT.cs \
	IntegrationTests/SelectiveIgnoreTests/FileCrud.cs \
	IntegrationTests/SelectiveIgnoreTests/MoveIT.cs \
	IntegrationTests/SelectiveIgnoreTests/RenameIT.cs \
	IntegrationTests/TestNameAttribute.cs \
	IntegrationTests/UploadFileIT.cs \
	IntegrationTests/UploadSlowWrittenFile.cs \
	MockedServer/MockOfIAclCapabilities.cs \
	MockedServer/MockOfIRepository.cs \
	MockedServer/MockOfISession.cs \
	MockedServer/MockOfISessionFactory.cs \
	MockedServer/MockedCmisServer.cs \
	MockedServer/MockedCmisUserAccount.cs \
	MockedServer/MockedFolder.cs \
	MoqExtensions/MoqExtensions.cs \
	PathMatcherTests/PathMatcherTest.cs \
	ProducerTests/ContentChangeTests/ContentChangeEventAccumulatorTest.cs \
	ProducerTests/ContentChangeTests/ContentChangeEventTransformerTest.cs \
	ProducerTests/ContentChangeTests/ContentChangesTest.cs \
	ProducerTests/CrawlerTests/CrawlEventGeneratorTest.cs \
	ProducerTests/CrawlerTests/CrawlEventNotifierTest.cs \
	ProducerTests/CrawlerTests/DescendantsCrawlerTest.cs \
	ProducerTests/CrawlerTests/LocalEventGeneratorTest.cs \
	ProducerTests/CrawlerTests/ObjectTreeTest.cs \
	ProducerTests/WatcherTests/CreatedChangedDeletedFileSystemEventHandlerTest.cs \
	ProducerTests/WatcherTests/MacWatcherTest.cs \
	ProducerTests/WatcherTests/NetWatcherTest.cs \
	ProducerTests/WatcherTests/RenamedFileSystemEventHandlerTest.cs \
	ProducerTests/WatcherTests/WatcherTest.cs \
	ProducerTests/WatcherTests/WatcherTestUtils.cs \
	QueueingTests/ConnectionSchedulerTest.cs \
	QueueingTests/DebugLoggingHandlerTest.cs \
	QueueingTests/DelayRetryAndNextSyncEventHandlerTest.cs \
	QueueingTests/EventManagerInitializerTest.cs \
	QueueingTests/SyncEventManagerTest.cs \
	QueueingTests/SyncEventQueueTest.cs \
	SelectiveIgnoreTests/EventTransformerTest.cs \
	SelectiveIgnoreTests/FilterTest.cs \
	SelectiveIgnoreTests/IgnoreFlagChangeDetectionTest.cs \
	SelectiveIgnoreTests/IgnoredEntitiesCollectionTest.cs \
	SelectiveIgnoreTests/IgnoredEntitiesStorageTest.cs \
	SelectiveIgnoreTests/IgnoredEntityTest.cs \
	StorageTests/DataBaseTests/DBreezeTests.cs \
	StorageTests/DataBaseTests/EntitiesTests/FileTransmissionObjectsTest.cs \
	StorageTests/DataBaseTests/EntitiesTests/IFileConvenienceExtendersTest.cs \
	StorageTests/DataBaseTests/EntitiesTests/MappedObjectsTest.cs \
	StorageTests/DataBaseTests/FileTransmissionStorageTest.cs \
	StorageTests/DataBaseTests/MetaDataStorageTest.cs \
	StorageTests/DataBaseTests/PersistentCookieStorageTest.cs \
	StorageTests/FileSystemTests/DateTimeConverterTest.cs \
	StorageTests/FileSystemTests/ExtendedAttributeReaderDosTest.cs \
	StorageTests/FileSystemTests/ExtendedAttributeReaderUnixTest.cs \
	StorageTests/FileSystemTests/FileSystemWrapperTests.cs \
	StorageTests/FileSystemTests/LongFileAndPathNameSupportTest.cs \
	StorageTests/FileSystemTests/Utf8FileNameNormalizationTest.cs \
	StreamsTests/BandwidthLimitedStreamTest.cs \
	StreamsTests/ChunkedStreamTest.cs \
	StreamsTests/NonClosingHashStreamTest.cs \
	StreamsTests/OffsetStreamTest.cs \
	StreamsTests/ProgressStreamTest.cs \
	TestUtils/FolderTree.cs \
	TestUtils/FolderTreeTest.cs \
	TestUtils/IDocumentAssertUtils.cs \
	TestUtils/IsTestWithConfiguredLog4Net.cs \
	TestUtils/MockMetaDataStorageUtil.cs \
	TestUtils/MockOfICmisObject.cs \
	TestUtils/MockOfIDocumentUtil.cs \
	TestUtils/MockOfIFileSystemInfoFactoryUtil.cs \
	TestUtils/MockOfIFileTransmissionStorageUtil.cs \
	TestUtils/MockOfIFilterAggregatorUtil.cs \
	TestUtils/MockOfIFolderUtil.cs \
	TestUtils/MockOfIRepositoryInfo.cs \
	TestUtils/MockOfISyncEventQueue.cs \
	TestUtils/MockOfITransmissionManagerUtil.cs \
	TestUtils/MockSessionUtil.cs \
	TestUtils/ObservableHandler.cs \
	TestUtils/ObservableHandlerTest.cs \
	TestUtils/SingleStepEventQueue.cs \
	TestUtils/SingleStepEventQueueTest.cs \
	UtilsTests/BackendTest.cs \
	UtilsTests/EncodingTest.cs \
	UtilsTests/HttpProxyUtilsTest.cs \
	UtilsTests/NameOfPropertyTest.cs \
	UtilsTests/ProcessDiagnosticsTest.cs \
	UtilsTests/X509StoreTest.cs

EXTRA_DIST = TestLibrary.csproj \
	$(MOQ_PATH)

include $(top_srcdir)/build/build.mk
